<resources>
    <string name="app_name">DryR</string>

    <string name="action_settings">Einstellungen</string>

    <string name="refresh">Aktualisieren</string>


    <!-- Navigation drawer !-->
    <string name="navigation_drawer_open">Navigationsleitste öffnen</string>
    <string name="navigation_drawer_close">Navigationsleitste schließen</string>

    <string name="navigation_drawer_item_laundry_status">Wäschestatus</string>
    <string name="navigation_drawer_item_sensor_status">Sensorstatus</string>
    <string name="navigation_drawer_item_settings">Einstellungen</string>


    <!-- LaundryStatus !-->
    <string name="laundry_status_drying">Trocknet</string>
    <string name="laundry_status_dry">Trocken</string>
    <string name="laundry_status_dry_at">Vorraussichtlicher Trockenheitszeitpunkt:</string>
    <string name="laundry_status_humidity">Feuchtigkeit</string>
    <string name="laundry_status_prediction">Vorhersage</string>
    <string name="laundry_status_humidity_dry">trocken</string>
    <string name="laundry_status_humidity_wet">nass</string>
    <string name="laundry_status_no_graph_data">Es stehen noch nicht genügend Daten für das Diagramm zur Verfügung</string>
    <string name="laundry_status_time">Zeit</string>
    <string name="laundry_status_no_sensor">Es ist kein Sensor mit der Basistation verbunden</string>
    <string name="laundry_status_base_station_connected">Mit Basistation verbunden</string>

    <!-- SensorStatus !-->
    <string name="sensor_status_battery">Batteriestand</string>
    <string name="sensor_status_connection">Verbindung</string>


    <!-- Preferences !-->
    <string name="pref_drawer_acknowledged_key">user_drawer_acknowledged</string>

    <string name="pref_baseStation_title">Basisstation</string>

    <string name="pref_baseStation_connect_title">Basisstation verbinden</string>
    <string name="pref_baseStation_connect_summary">Verbindet eine neue Basisstation mit der App</string>
    <string name="pref_baseStation_connect_key">baseStation</string>

    <string name="pref_sensor_pair_title">Sensor pairen</string>
    <string name="pref_sensor_pair_summary">Verbindet einen neuen Sensor mit der Basisstation</string>
    <string name="pref_sensor_pair_key">sensorPair</string>

    <string name="pref_notification_title">Benachrichtigungen</string>

    <string name="pref_notification_push_title">Push Benachrichtigungen</string>
    <string name="pref_notification_push_summary">Push Benachrichtigung über trockene Wäsche ein oder ausschalten</string>
    <string name="pref_notification_push_key">notifications_push</string>

    <string name="pref_notification_last_dry_state_key">notification_last_dry</string>


    <!-- ConnectBaseStationDialog !-->
    <string name="pref_connected_base_station">Verbundene Basisstation:</string>
    <string name="pref_no_connected_base_station">keine</string>
    <string name="pref_bs_disconnect">Verbindung trennen</string>
    <string name="pref_connect_new_bs">neue Basisstation verbinden</string>
    <string name="pref_available_bs">Zur Verfügung stehende Basisstationen: </string>
    <string name="pref_no_available_bs">keine</string>
    <string name="pref_bs_connect">Verbinden</string>
    <string name="pref_bs_retry">Nochmal versuchen</string>
    <string name="pref_bs_refresh">Neu laden</string>
    <string name="pref_bs_connection_with">Verbindung mit</string>
    <string name="pref_bs_successful">erfolgreich</string>


    <!-- PairSensorDialog !-->
    <string name="pref_connected_sensors">Verbundene Sensoren:</string>
    <string name="pref_no_connected_sensors">keine</string>
    <string name="pref_sensors_disconnect">Sensor entfernen</string>
    <string name="pref_sensors_disconnect_cancel">Sensor entfernen abbrechen</string>
    <string name="pref_connect_new_sensor">Neuen Sensor hinzufügen</string>
    <string name="pref_available_sensors">Zur Verfügung stehende Sensoren:</string>
    <string name="pref_no_available_sensors">keine (außer den bereits hinzugefügten)</string>
    <string name="pref_sensors_retry">Nochmal versuchen</string>
    <string name="pref_sensors_refresh">Neu laden</string>
    <string name="pref_sensors_connection_with">Zu verbindenede Sensoren:</string>
    <string name="pref_sensors_disconnection_of">Zu löschende Sensoren:</string>
    <string name="pref_sensors_successful">erfolgreich</string>
    <string name="pref_sensors_connect_another">Weiteren Sensor hinzufügen</string>


    <!-- General errors !-->
    <string name="error_dialog_title">Ein Fehler ist aufgetreten</string>
    <string name="error_connection_default">Bei der Verbindung ist ein Fehler aufgetreten, überprüfen
        Sie ihre Netzwerkverbindung und stellen Sie sicher, dass Sie sich im gleichen Netz wie
        Ihre Basisstation befinden.</string>
    <string name="error_no_base_station_found">Bei der Verbindung mit der Basistation ist ein Fehler aufgetreten, überprüfen
        Sie ihre Netzwerkverbindung und stellen Sie sicher, dass Sie sich im gleichen Netz wie
        Ihre Basisstation befinden und, dass diese angeschaltet ist.</string>
    <string name="error_retry">Nochmal versuchen</string>

    <!-- Notifications !-->
    <string name="notification_laundry_dry_title">Wäsche trocken</string>
    <string name="notification_laundry_dry_text">Ihre Wäsche ist nun trocken</string>

</resources>
