<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_group_general" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_laundry_status"
            android:icon="@drawable/ic_menu_shirt"
            android:title="@string/navigation_drawer_item_laundry_status"
            />
        <item
            android:id="@+id/nav_sensor_status"
            android:icon="@drawable/ic_menu_sensor"
            android:title="@string/navigation_drawer_item_sensor_status" />
    </group>

    <group android:id="@+id/nav_group_settings" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/navigation_drawer_item_settings" />
    </group>

</menu>
