<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/dialog_connect_base_station_connected_station_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_connected_base_station" />

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/dialog_connect_base_station_connected_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_no_connected_base_station"
            style="@style/TextAppearance.AppCompat.Small"/>

        <Button
            android:id="@+id/dialog_connect_base_station_disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@drawable/accent_color_selector"
            android:text="@string/pref_bs_disconnect"/>

        <Button
            android:id="@+id/dialog_connect_base_station_new_bs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@drawable/primary_color_selector"
            android:text="@string/pref_connect_new_bs"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_connect_base_station_connect_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_available_bs" />

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/dialog_connect_base_station_available_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_no_available_bs"
            style="@style/TextAppearance.AppCompat.Small"/>

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/dialog_connect_base_station_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:textColor="@color/error_text_color"
            android:visibility="gone"
            style="@style/TextAppearance.AppCompat.Small"/>

        <Button
            android:id="@+id/dialog_connect_base_station_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@drawable/primary_color_selector"
            android:text="@string/pref_bs_retry"
            android:visibility="gone"/>

        <android.support.v7.widget.RecyclerView
            android:layout_margin="10dp"
            android:id="@+id/dialog_connect_base_station_available_recycler"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"/>

        <Button
            android:id="@+id/dialog_connect_base_station_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@drawable/primary_color_selector"
            android:text="@string/pref_bs_refresh"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_connect_base_station_connection_successful_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/pref_bs_connection_with"
            android:textColor="@color/success_color"/>

        <TextView
            android:id="@+id/dialog_connect_base_station_success_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/TextAppearance.AppCompat.Medium"/>

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pref_bs_successful"
            android:textColor="@color/success_color"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/dialog_connect_base_station_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>