<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dryr.android.presenter.fragments.SensorStatusFragment">

    <LinearLayout
        android:id="@+id/sensor_status_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical">

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensor_status_connection"
            android:visibility="gone"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sensor_status_connection_bar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="not implemented yet"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sensor_status_message_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/laundry_status_no_sensor"
            android:visibility="gone" />

        <Button
            android:id="@+id/sensor_status_message_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_sensor_pair_title"
            android:textColor="@drawable/primary_color_selector"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/sensor_status_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"/>

    </LinearLayout>

</RelativeLayout>
